--- a/style.css
+++ b/style.css
@@ -71,3 +71,13 @@ p {
   
   // filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
 }
+
+.paper.video {
+  padding: 10px;
+  background: #fff;
+}
+
+.paper.video video {
+  width: 100%;
+  max-height: 300px;
+}
